--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -25,7 +25,8 @@
 
 <section class="container">
     <div class="stats-header">
-        <h1>Latest Coronavirus Statistics <br> <%= date %></h1>
+        <h1>Latest Statistics</h1>
+        <h2><%= date %></h2>
     </div>
     <div class="global-stats">
 
