--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -247,6 +247,10 @@ span:hover{
     font-size: 2rem;
 }
 
+.stats-header h2 {
+    font-size: 1.5rem;
+}
+
 .global-stats {
     margin: 1.5rem auto;
     display: grid;
@@ -257,6 +261,7 @@ span:hover{
     "europe africa oceania" 
     ;
     grid-gap: 10px;
+    padding-bottom: 32px;
 }
 
 @media (max-width: 768px){
@@ -326,16 +331,21 @@ table h2 {
 }
 
 /* Country Search Results Page  */
+.results-container {
+    padding-bottom: 2.5rem;
+}
+
 .country-results {
     width: 75%;
-    margin: 5rem auto;
+    margin: 5rem auto 1rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: 0.25fr;
+    grid-template-rows: 0.25fr;
     grid-template-areas: 
         "country-searched country-searched country-searched country-searched country-searched"
         "cases-today deaths-today recoveries-today active-cases critical-cases"
         "total-cases total-deaths total-recoveries tests-done tests-done"
+        "statement statement statement statement statement"
     ;
     grid-gap: 10px;
 }
@@ -347,6 +357,10 @@ table h2 {
 
 .top-result-div p {
     margin-top: 0;
+}
+
+.results-container small {
+    font-size: 0.65rem;
 }
 
 .results-divs {
@@ -369,7 +383,7 @@ table h2 {
 @media (max-width: 768px){
     .country-results {
         width: 75%;
-        margin: 5rem auto;
+        margin: 5rem auto 1rem;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 0.25fr;
@@ -380,6 +394,7 @@ table h2 {
             "recoveries-today total-recoveries"
             "active-cases tests-done"
             "critical-cases tests-done"
+            "statement statement"
         ;
         grid-gap: 10px;
     }
@@ -429,8 +444,14 @@ footer {
 }
 
 footer p {
-    font-size: 0.75rem;
+    font-size: 0.70rem;
     margin-bottom: 0;
     padding-bottom: 0;
+}
+
+/* Fail Page  */
+.fail {
+    text-align: center;
+    padding: 10%;
 }
 
