--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,6 +7,7 @@
         </div>
 
         <p>Created with ❤ using the <a href="https://github.com/disease-sh/API">NovelCOVID API</a></p>
+        <p>Email: HappyPhiri94@gmail.com</p>
         <p>Copyright &copy; <span class="copyright-year"><script>document.write(new Date().getFullYear())</script></span> | <a href="https://www.facebook.com/hpy.phiri" target="blank">Happy Phiri</a></p>
     </footer>
         
