--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -53,7 +53,7 @@
     </div>
 
     <div class="continent-stats-header">
-        <h2>World Continents Statistics</h2>
+        <h2>Continent by Continent Statistics</h2>
     </div>
     <div class="global-stats">
         
